# rustle

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
migrations/: 0001_create_messages.sql  0002_create_users.sql
src/: auth.rs  config.rs  db.rs  error.rs  hub.rs  lib.rs  main.rs  message.rs  routes.rs  ws.rs
static/: index.html
tests/: integration.rs
