[package]
name = "rustle"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
chrono = "0.4.45"
futures-util = "0.3.33"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros", "migrate"] }
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "net", "signal", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "handshake"] }
